--- a/pages/19034.html
+++ b/pages/19034.html
@@ -1093,7 +1093,7 @@ margin-left: 0em;
 <p><img src='https://ncatlab.org/nlab/files/BottomUpAndTopDownIntersDBraneModelBuilding.png' width='800'/></p>
 
 <blockquote>
-<p>snipped grabbed from <a href='#AldazabalIbanezQuevedoUranga00'>Aldazabal-Ibáñez-Quevedo-Uranga 00</a></p>
+<p>snippet grabbed from <a href='#AldazabalIbanezQuevedoUranga00'>Aldazabal-Ibáñez-Quevedo-Uranga 00</a></p>
 </blockquote>
 
 <p>For more on this see at <a class='existingWikiWord' href='/nlab/show/string+phenomenology'>string phenomenology</a> the section <em><a href='string+phenomenology#TopDownAndBottomUpModels'>Top-down models and Bottom-up models</a></em>.</p>
@@ -1127,14 +1127,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on February 24, 2018 11:57:33 
+  Revised on February 24, 2018 13:21:16 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (91.230.41.202)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/bottom-up+and+top-down+model+building" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/bottom-up+and+top-down+model+building" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/bottom-up+and+top-down+model+building/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/bottom-up+and+top-down+model+building" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/bottom-up+and+top-down+model+building" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
