--- a/pages/19035.html
+++ b/pages/19035.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Charles Sanders Peirce in nLab
+      Robert Leigh in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Charles Sanders Peirce
+      Robert Leigh
   </h1>
 
 
@@ -308,112 +308,36 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>Charles Sanders Peirce (1839-1914), a philosopher, logician and scientist, was one of the founders of modern symbolic <a class='existingWikiWord' href='/nlab/show/logic'>logic</a>. In particular, he developed a form of <a class='existingWikiWord' href='/nlab/show/predicate+logic'>predicate logic</a>. Peirce devised a graphical notation, known as <strong>existential graphs</strong>, to represent logical calculi. There were three systems of such graphs: the system <em>alpha</em>, to represent <a class='existingWikiWord' href='/nlab/show/propositional+logic'>propositional logic</a>, the system <em>beta</em>, to represent <a class='existingWikiWord' href='/nlab/show/predicate+logic'>predicate logic</a>, and the system <em>gamma</em>, to represent <a class='existingWikiWord' href='/nlab/show/modal+logic'>modal logic</a>.</p>
+    <ul>
+<li><a href='https://en.wikipedia.org/wiki/Robert_Leigh'>Wikipedia entry</a></li>
+</ul>
 
-<p><a class='existingWikiWord' href='/nlab/show/Geraldine+Brady'>Geraldine Brady</a> and <a class='existingWikiWord' href='/nlab/show/Todd+Trimble'>Todd Trimble</a> have given a category theoretic interpretation of the alpha and beta systems. The latter, a form of <a class='existingWikiWord' href='/nlab/show/string+diagram'>string diagrammatic</a> notation, was developed (<a href='#PontoShul'>PontoShul</a>) into a <a class='existingWikiWord' href='/nlab/show/string+diagram'>string diagram</a> notation for <a class='existingWikiWord' href='/nlab/show/indexed+monoidal+category'>indexed monoidal categories</a>. A development also appears in <a href='#MellZeil'>MellZeil</a>.</p>
-
-<p>Peirce’s philosophy can be seen as Schellingism transformed in light of (in Peirce’s time) modern physics, as Peirce himself notes in an 1894 letter to William James:</p>
-
-<blockquote>
-<p>My views were probably influenced by <a class='existingWikiWord' href='/nlab/show/Schelling'>Schelling</a> - by all stages of Schelling, but especially the <em>Philosophie der Natur</em>. I consider Schelling as enormous, and one thing I admire about him is his freedom from the trammels of system, and his holding himself uncommitted to any previous utterance. in that, he is like a scientific man. If you were to call my philosophy Schellingism transformed in the light of modern physics, I should not take it hard.</p>
-</blockquote>
-
-<h2 id='references'>References</h2>
-
-<p>Stanford Encyclopedia of Philosophy entries:</p>
+<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_32232b714f6c696196251bdb8a1ed6812fc2b851_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
-<li><a href='https://plato.stanford.edu/entries/peirce/'>Charles Sanders Peirce</a></li>
-
-<li><a href='https://plato.stanford.edu/entries/peirce-logic/'>Peirce’s Deductive Logic</a></li>
-
-<li><a href='https://plato.stanford.edu/entries/peirce-semiotics/'>Peirce’s Theory of Signs</a></li>
-
-<li><a href='https://plato.stanford.edu/entries/peirce/self-contextualization.html'>Peirce’s View of the Relationship Between His Own Work and German Idealism</a></li>
-
-<li><a href='https://plato.stanford.edu/entries/abduction/peirce.html'>Peirce on Abduction</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/intersecting+D-brane+model'>intersecting D-brane models</a></li>
 </ul>
 
-<p>Other references</p>
-
-<ul id='PontoShul'>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Geraldine+Brady'>Geraldine Brady</a> and <a class='existingWikiWord' href='/nlab/show/Todd+Trimble'>Todd Trimble</a> (2000a). A Categorical Interpretation of C. S. Peirce’s Propositional Logic Alpha. Journal of Pure and Applied Algebra 149 (2000): 213-239</p>
-</li>
-
-<li id='BradyTrimble'>
-<p><a class='existingWikiWord' href='/nlab/show/Geraldine+Brady'>Geraldine Brady</a> and <a class='existingWikiWord' href='/nlab/show/Todd+Trimble'>Todd Trimble</a> (2000b). <em><a class='existingWikiWord' href='/nlab/show/A+string+diagram+calculus+for+predicate+logic'>A String Diagram Calculus for Predicate Logic and C. S. Peirce&#39;s System Beta</a></em>, preprint</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Kate+Ponto'>Kate Ponto</a> and <a class='existingWikiWord' href='/nlab/show/Mike+Shulman'>Mike Shulman</a>, Duality and traces in indexed monoidal categories, (<a href='http://www.sandiego.edu/~shulman/papers/indexed-color.pdf'>web</a>)</p>
-</li>
-</ul>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Fernando+Zalamea'>Fernando Zalamea</a> (2012), Peirce’s Logic of Continuity: A Conceptual and Mathematical Approach</p>
-</li>
-
-<li>
-<p>Frederik Stjernfelt (2014), Natural Propositions: The Actuality of Peirce’s Doctrine of Dicisigns</p>
-</li>
-
-<li>
-<p>Rosa Maria Perez-Teran Mayorga (2008), From Realism to ‘Realicism’: The Metaphysics of Charles Sanders Peirce</p>
-</li>
-
-<li>
-<p>Andrew Reynolds (2002), Peirce’s Scientific Metaphysics: The Philosophy of Chance, Law, and Evolution</p>
-</li>
-
-<li>
-<p>Matthew Moore (ed) (2010), New Essays on Peirce’s Mathematical Philosophy</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Louis+Kauffman'>Louis Kauffman</a> (2001), <a href='http://homepages.math.uic.edu/~kauffman/CHK.pdf'>The Mathematics of Charles Sanders Peirce</a></p>
-</li>
-
-<li>
-<p>C.S. Peirce &amp; Matthew Moore (ed) (2010), Philosophy of Mathematics: Selected Writings</p>
-</li>
-
-<li id='MellZeil'>
-<p><a class='existingWikiWord' href='/nlab/show/Paul-Andr%C3%A9+Melli%C3%A8s'>Paul-André Melliès</a> and <a class='existingWikiWord' href='/nlab/show/Noam+Zeilberger'>Noam Zeilberger</a> (2016) <em>A bifibrational reconstruction of Lawvere’s presheaf hyperdoctrine</em>, (<a href='http://arxiv.org/abs/1601.06098'>arXiv:1601.06098, cs.LO</a>)</p>
-</li>
-
-<li>
-<p>Fernando Zalamea, Peirce’s logic of continuity, a conceptual and mathematical approach, <a href='https://www.academia.edu/31948393/ZalameaPeirceCont.pdf'>link</a></p>
-</li>
-</ul>
-
-<p>
- 
- 
- 
-</p>
-
-<p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a>, <a class='category_link' href='/nlab/list/philosophy'>philosophy</a></div></p>
+<p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Revised on February 24, 2018 13:10:19 
-  by <a class="existingWikiWord" href="/nlab/show/Zoran+%C5%A0koda">Zoran Škoda</a>
-  (212.91.105.244)
+  Created on February 24, 2018 13:31:43 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (91.230.41.202)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Charles+Sanders+Peirce" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Charles+Sanders+Peirce/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/Charles+Sanders+Peirce" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Charles+Sanders+Peirce" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Robert+Leigh" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/Charles+Sanders+Peirce" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Robert+Leigh" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/Charles+Sanders+Peirce" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Robert+Leigh" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Charles+Sanders+Peirce" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Robert+Leigh" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
