--- a/pages/6807.html
+++ b/pages/6807.html
@@ -582,7 +582,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>The <em>BFSS matrix model</em> (<a href='#BanksFischlerShenkerSusskind96'>Banks-Fischler-Shenker-Susskind 96</a>) is the description of the <a class='existingWikiWord' href='/nlab/show/worldvolume'>worldline</a> dynamics of interacting <a class='existingWikiWord' href='/nlab/show/D0-brane'>D0-branes</a>. In the limit of large number <math class='maruku-mathml' display='inline' id='mathml_7d2210e62e98da5f4f0e54570a9d93a945c472d7_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi></mrow><annotation encoding='application/x-tex'>N</annotation></semantics></math> of D0 branes supposed to encode the <a class='existingWikiWord' href='/nlab/show/non-perturbative+quantum+field+theory'>strong coupling limit</a> of <a class='existingWikiWord' href='/nlab/show/type+II+string+theory'>type IIA string theory</a> (see also at <em><a class='existingWikiWord' href='/nlab/show/M-theory'>M-theory</a></em>).</p>
+<p>The <em>BFSS matrix model</em> (<a href='#BanksFischlerShenkerSusskind96'>Banks-Fischler-Shenker-Susskind 96</a>) is the description of the <a class='existingWikiWord' href='/nlab/show/worldvolume'>worldline</a> dynamics of interacting <a class='existingWikiWord' href='/nlab/show/D0-brane'>D0-branes</a>. In the limit of large number <math class='maruku-mathml' display='inline' id='mathml_220027094868d127eb4fc69a4781664246c579c6_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi></mrow><annotation encoding='application/x-tex'>N</annotation></semantics></math> of D0 branes supposed to encode the <a class='existingWikiWord' href='/nlab/show/non-perturbative+quantum+field+theory'>strong coupling limit</a> of <a class='existingWikiWord' href='/nlab/show/type+II+string+theory'>type IIA string theory</a> (see also at <em><a class='existingWikiWord' href='/nlab/show/M-theory'>M-theory</a></em>).</p>
 
 <p>The BFSS matrix model was argued to arise in several equivalent ways:</p>
 
@@ -645,7 +645,7 @@ margin-left: 0em;
 <p>Further perspective includes</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Paul+Townsend'>Paul Townsend</a>, <em>M(embrane) theory on <math class='maruku-mathml' display='inline' id='mathml_7d2210e62e98da5f4f0e54570a9d93a945c472d7_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>T</mi> <mn>0</mn></msup></mrow><annotation encoding='application/x-tex'>T^0</annotation></semantics></math></em>, Nucl.Phys.Proc.Suppl.68:11-16,1998 (<a href='http://arxiv.org/abs/hep-th/9708034'>arXiv:hep-th/9708034</a>)</li>
+<li><a class='existingWikiWord' href='/nlab/show/Paul+Townsend'>Paul Townsend</a>, <em>M(embrane) theory on <math class='maruku-mathml' display='inline' id='mathml_220027094868d127eb4fc69a4781664246c579c6_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>T</mi> <mn>0</mn></msup></mrow><annotation encoding='application/x-tex'>T^0</annotation></semantics></math></em>, Nucl.Phys.Proc.Suppl.68:11-16,1998 (<a href='http://arxiv.org/abs/hep-th/9708034'>arXiv:hep-th/9708034</a>)</li>
 </ul>
 
 <p>Numerical computation:</p>
@@ -663,7 +663,7 @@ margin-left: 0em;
 <p>Relation to the <a class='existingWikiWord' href='/nlab/show/6d+%282%2C0%29-supersymmetric+QFT'>6d (2,0)-supersymmetric QFT</a>:</p>
 
 <ul>
-<li>Micha Berkooz, Moshe Rozali, Nathan Seiberg, <em>Matrix Description of M-theory on <math class='maruku-mathml' display='inline' id='mathml_7d2210e62e98da5f4f0e54570a9d93a945c472d7_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>T</mi> <mn>3</mn></msup></mrow><annotation encoding='application/x-tex'>T^3</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_7d2210e62e98da5f4f0e54570a9d93a945c472d7_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>T</mi> <mn>5</mn></msup></mrow><annotation encoding='application/x-tex'>T^5</annotation></semantics></math></em> (<a href='http://arxiv.org/abs/hep-th/9704089'>arXiv:hep-th/9704089</a>)</li>
+<li><a class='existingWikiWord' href='/nlab/show/Micha+Berkooz'>Micha Berkooz</a>, <a class='existingWikiWord' href='/nlab/show/Moshe+Rozali'>Moshe Rozali</a>, <a class='existingWikiWord' href='/nlab/show/Nathan+Seiberg'>Nathan Seiberg</a>, <em>Matrix Description of M-theory on <math class='maruku-mathml' display='inline' id='mathml_220027094868d127eb4fc69a4781664246c579c6_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>T</mi> <mn>3</mn></msup></mrow><annotation encoding='application/x-tex'>T^3</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_220027094868d127eb4fc69a4781664246c579c6_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>T</mi> <mn>5</mn></msup></mrow><annotation encoding='application/x-tex'>T^5</annotation></semantics></math></em> (<a href='http://arxiv.org/abs/hep-th/9704089'>arXiv:hep-th/9704089</a>)</li>
 </ul>
 
 <p>
@@ -671,14 +671,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February  5, 2017 03:01:24 
+  Revised on February 24, 2018 14:20:39 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.229.110.3)
+  (91.230.41.202)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/BFSS+matrix+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/BFSS+matrix+model/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/BFSS+matrix+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/BFSS+matrix+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/BFSS+matrix+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/BFSS+matrix+model/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/BFSS+matrix+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/BFSS+matrix+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
