--- a/pages/19034.html
+++ b/pages/19034.html
@@ -1090,7 +1090,7 @@ margin-left: 0em;
 
 <p>This distinction was highlighted, and the terminology established, in (<a href='#AldazabalIbanezQuevedoUranga00'>Aldazabal-Ibáñez-Quevedo-Uranga 00</a>); there in the context of discussion of <a class='existingWikiWord' href='/nlab/show/string+phenomenology'>string phenomenology</a> and specifically of <a class='existingWikiWord' href='/nlab/show/intersecting+D-brane+model'>intersecting D-brane models</a> in <a class='existingWikiWord' href='/nlab/show/type+II+string+theory'>type II string theory</a>. In fact the article proposes and advertizes the bottom-up-strategy, felt to be in contrast with the, at that time, dominant top-down-strategy going back to (<a href='#CandelasHorowitzWitten85'>Candelas-Horowitz-Witten 85</a>).</p>
 
-<p><img src='https://ncatlab.org/nlab/files/BottomUpAndTopDownIntersDBraneModelBuilding.png' width='800'/></p>
+<p><img src='https://ncatlab.org/nlab/files/BottomUpAndTopDownIntersDBraneModelBuilding.png' width='700'/></p>
 
 <blockquote>
 <p>snippet grabbed from <a href='#AldazabalIbanezQuevedoUranga00'>Aldazabal-Ibáñez-Quevedo-Uranga 00</a></p>
@@ -1127,14 +1127,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February 24, 2018 13:21:16 
+  Revised on February 24, 2018 15:08:42 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (91.230.41.202)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/bottom-up+and+top-down+model+building" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/bottom-up+and+top-down+model+building/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/bottom-up+and+top-down+model+building" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/bottom-up+and+top-down+model+building" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/bottom-up+and+top-down+model+building" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/bottom-up+and+top-down+model+building/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/bottom-up+and+top-down+model+building" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/bottom-up+and+top-down+model+building" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
