--- a/pages/2055.html
+++ b/pages/2055.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -518,7 +518,7 @@ margin-left: 0em;
 </div>
 </div>
 
-<p>This page lists links to <a href='http://en.wikipedia.org/wiki/Blog'>blogs</a>, and online mathematical communities like forums and <a href='http://en.wikipedia.org/wiki/Wiki'>wikis</a>. For links to main repositories of free books, lectures, videos, reviews and math papers see <a class='existingWikiWord' href='/nlab/show/math+archives'>math archives</a> and for a list of societies and institutions see <a class='existingWikiWord' href='/nlab/show/math+institutions'>math institutions</a>. A higher level branch page is <a class='existingWikiWord' href='/nlab/show/math+resources'>math resources</a>. Math is here just a mnemo, this page partains also to the related areas of interest for <math class='maruku-mathml' display='inline' id='mathml_9e9022966b22a78a88caeff4fa496295a37adc4b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab like LaTeX, physics, philosophy, theoretical computer science etc.</p>
+<p>This page lists links to <a href='http://en.wikipedia.org/wiki/Blog'>blogs</a>, and online mathematical communities like forums and <a href='http://en.wikipedia.org/wiki/Wiki'>wikis</a>. For links to main repositories of free books, lectures, videos, reviews and math papers see <a class='existingWikiWord' href='/nlab/show/math+archives'>math archives</a> and for a list of societies and institutions see <a class='existingWikiWord' href='/nlab/show/math+institutions'>math institutions</a>. A higher level branch page is <a class='existingWikiWord' href='/nlab/show/math+resources'>math resources</a>. Math is here just a mnemo, this page partains also to the related areas of interest for <math class='maruku-mathml' display='inline' id='mathml_65071378b9422ed32cfb764fb5d93fcafe754718_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab like LaTeX, physics, philosophy, theoretical computer science etc.</p>
 
 <p>For a quick introduction to math blogging, see</p>
 
@@ -628,7 +628,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a href='http://ncatlab.org'>The nLab</a>, or <math class='maruku-mathml' display='inline' id='mathml_9e9022966b22a78a88caeff4fa496295a37adc4b_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-Category Lab, which you are reading right now!</p>
+<p><a href='http://ncatlab.org'>The nLab</a>, or <math class='maruku-mathml' display='inline' id='mathml_65071378b9422ed32cfb764fb5d93fcafe754718_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-Category Lab, which you are reading right now!</p>
 </li>
 
 <li>
@@ -648,7 +648,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a href='http://mathoverflow.net/'>Math Overflow</a> has become a universal clearinghouse for questions and answers “of interest to mathematicians”, modeled on <a href='http://stackoverflow.com/'>stackoverflow</a> and <a href='http://stackexchange.com'>daughters</a> of <a href='http://area51.stackexchange.com'>http://area51.stackexchange.com</a>, including <a href='http://math.stackexchange.com'>math.stackexchange</a> dedicated to lower level math questions (“MathUnderflow”), <a href='http://tex.stackexchange.com'>tex.stackexchange</a> about TeX and LaTeX. The similar <a href='http://physicsoverflow.com'>physicsoverflow.com</a> is deprecated; use <a href='http://physics.stackexchange.com'>physics.stackexchange</a> instead. There is also the new <a href='physicsoverflow.org'>PhysicsOverflow</a>, which “comprises of a discussion forum for Physics at a graduate-level and beyond, and a section for research paper refereeing (reviews)”.</p>
+<p><a href='http://mathoverflow.net/'>Math Overflow</a> has become a universal clearinghouse for questions and answers “of interest to mathematicians”, modeled on <a href='http://stackoverflow.com/'>stackoverflow</a> and <a href='http://stackexchange.com'>daughters</a> of &lt;http://area51.stackexchange.com&gt;, including <a href='http://math.stackexchange.com'>math.stackexchange</a> dedicated to lower level math questions (“MathUnderflow”), <a href='http://tex.stackexchange.com'>tex.stackexchange</a> about TeX and LaTeX. The similar <a href='http://physicsoverflow.com'>physicsoverflow.com</a> is deprecated; use <a href='http://physics.stackexchange.com'>physics.stackexchange</a> instead. There is also the new <a href='physicsoverflow.org'>PhysicsOverflow</a>, which “comprises of a discussion forum for Physics at a graduate-level and beyond, and a section for research paper refereeing (reviews)”.</p>
 </li>
 
 <li>
@@ -812,6 +812,10 @@ margin-left: 0em;
 </li>
 
 <li>
+<p><a href='https://blog.wias-berlin.de/imu-journals'>IMU - Journals</a> blog on mathematical journals</p>
+</li>
+
+<li>
 <p><a href='http://jdh.hamkins.org'>Joel David Hamkins</a> “mathematics and philosophy of the infinite”, foundations</p>
 </li>
 
@@ -864,7 +868,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a href='http://categorymath.wordpress.com/'>Mathematical Formalities</a> This blog is written by <a class='existingWikiWord' href='/nlab/show/Sanath+Devalapurkar'>Sanath Devalapurkar</a>, presenting some of his ideas and thoughts on (higher) category theory and <math class='maruku-mathml' display='inline' id='mathml_9e9022966b22a78a88caeff4fa496295a37adc4b_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi></mrow><annotation encoding='application/x-tex'>K</annotation></semantics></math>-theory.</p>
+<p><a href='http://categorymath.wordpress.com/'>Mathematical Formalities</a> This blog is written by <a class='existingWikiWord' href='/nlab/show/Sanath+Devalapurkar'>Sanath Devalapurkar</a>, presenting some of his ideas and thoughts on (higher) category theory and <math class='maruku-mathml' display='inline' id='mathml_65071378b9422ed32cfb764fb5d93fcafe754718_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi></mrow><annotation encoding='application/x-tex'>K</annotation></semantics></math>-theory.</p>
 </li>
 
 <li>
@@ -928,7 +932,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a href='http://nikitamarkarian.wordpress.com'>Nikita Markarian’s mathblog</a> (derived algebraic geometry, dg-, <math class='maruku-mathml' display='inline' id='mathml_9e9022966b22a78a88caeff4fa496295a37adc4b_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>L</mi> <mn>∞</mn></msub><mo>,</mo><msub><mi>A</mi> <mn>∞</mn></msub><mo>,</mo><msub><mi>G</mi> <mn>∞</mn></msub></mrow><annotation encoding='application/x-tex'>L_\infty, A_\infty, G_\infty</annotation></semantics></math>-algebras, operads, TQFT, BV formalism, Hochschild and cyclic (co)homology…–last updated July 2011)</p>
+<p><a href='http://nikitamarkarian.wordpress.com'>Nikita Markarian’s mathblog</a> (derived algebraic geometry, dg-, <math class='maruku-mathml' display='inline' id='mathml_65071378b9422ed32cfb764fb5d93fcafe754718_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>L</mi> <mn>∞</mn></msub><mo>,</mo><msub><mi>A</mi> <mn>∞</mn></msub><mo>,</mo><msub><mi>G</mi> <mn>∞</mn></msub></mrow><annotation encoding='application/x-tex'>L_\infty, A_\infty, G_\infty</annotation></semantics></math>-algebras, operads, TQFT, BV formalism, Hochschild and cyclic (co)homology…–last updated July 2011)</p>
 </li>
 
 <li>
@@ -1160,7 +1164,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a href='http://mathlight.wordpress.com'>mathlight</a> (by an <math class='maruku-mathml' display='inline' id='mathml_9e9022966b22a78a88caeff4fa496295a37adc4b_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>lab regular–last update December 2010)</p>
+<p><a href='http://mathlight.wordpress.com'>mathlight</a> (by an <math class='maruku-mathml' display='inline' id='mathml_65071378b9422ed32cfb764fb5d93fcafe754718_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>lab regular–last update December 2010)</p>
 </li>
 
 <li>
@@ -1303,14 +1307,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on July 28, 2017 15:29:56 
-  by <a class="existingWikiWord" href="/nlab/show/AndriusKulikauskas">Andrius Kulikauskas</a>
-  (188.69.210.146)
+  Revised on February 25, 2018 07:54:57 
+  by <a class="existingWikiWord" href="/nlab/show/Zoran+%C5%A0koda">Zoran Škoda</a>
+  (212.91.104.13)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/math+blogs" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/math+blogs/161" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(161 revisions)</span> | <a href="/nlab/show/diff/math+blogs" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/math+blogs" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/math+blogs" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/math+blogs/162" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(162 revisions)</span> | <a href="/nlab/show/diff/math+blogs" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/math+blogs" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
