--- a/pages/1788.html
+++ b/pages/1788.html
@@ -308,18 +308,72 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>jjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjsssssssssssssssssssssssssssssssssssssssssssssssssssssssssssjjjjjjjjjjjjjsssjsysysysyy</p>
+    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_f22e9b65083186f9970c95716bfffdb265960bb9_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd></mtd> <mtd><msup><mi>B</mi> <mi>a</mi></msup><msub><mrow></mrow> <mi>b</mi></msub><mo>∧</mo><msup><mi>B</mi> <mi>b</mi></msup><msub><mrow></mrow> <mi>c</mi></msub><msub><mo>∂</mo> <mrow><msup><mi>B</mi> <mi>a</mi></msup><msub><mrow></mrow> <mrow><mi>b</mi><mo>′</mo></mrow></msub></mrow></msub><msub><mo>∂</mo> <mrow><msup><mi>B</mi> <mrow><mi>b</mi><mo>′</mo></mrow></msup><msub><mrow></mrow> <mi>c</mi></msub></mrow></msub><mo stretchy='false'>(</mo><msup><mi>B</mi> <mi>d</mi></msup><msub><mrow></mrow> <mi>e</mi></msub><mo>∧</mo><msup><mi>B</mi> <mi>e</mi></msup><msub><mrow></mrow> <mi>f</mi></msub><mo stretchy='false'>)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><msup><mi>B</mi> <mi>a</mi></msup><msub><mrow></mrow> <mi>b</mi></msub><mo>∧</mo><msup><mi>B</mi> <mi>b</mi></msup><msub><mrow></mrow> <mi>e</mi></msub><msub><mo>∂</mo> <mrow><msup><mi>B</mi> <mi>a</mi></msup><msub><mrow></mrow> <mi>d</mi></msub></mrow></msub><msup><mi>B</mi> <mi>e</mi></msup><msub><mrow></mrow> <mi>f</mi></msub><mo>−</mo><msup><mi>B</mi> <mi>a</mi></msup><msub><mrow></mrow> <mi>b</mi></msub><mo>∧</mo><msup><mi>B</mi> <mrow><mi>b</mi><mi>d</mi></mrow></msup><msub><mo>∂</mo> <mrow><msup><mi>B</mi> <mrow><mi>a</mi><mi>e</mi></mrow></msup></mrow></msub><msup><mi>B</mi> <mi>e</mi></msup><msub><mrow></mrow> <mi>f</mi></msub></mtd></mtr> <mtr><mtd></mtd> <mtd><mphantom><mo>=</mo></mphantom><mo>−</mo><msup><mi>B</mi> <mi>a</mi></msup><msub><mrow></mrow> <mi>b</mi></msub><mo>∧</mo><msup><mi>B</mi> <mi>b</mi></msup><msub><mrow></mrow> <mi>f</mi></msub><msub><mo>∂</mo> <mrow><msup><mi>B</mi> <mi>a</mi></msup><msub><mrow></mrow> <mrow><mi>b</mi><mo>′</mo></mrow></msub></mrow></msub><msup><mi>B</mi> <mi>d</mi></msup><msub><mrow></mrow> <mrow><mi>b</mi><mo>′</mo></mrow></msub><mo>+</mo><msup><mi>B</mi> <mi>a</mi></msup><msub><mrow></mrow> <mi>b</mi></msub><mo>∧</mo><msup><mi>B</mi> <mi>b</mi></msup><msub><mrow></mrow> <mi>c</mi></msub><msub><mo>∂</mo> <mrow><msup><mi>B</mi> <mrow><mi>a</mi><mi>f</mi></mrow></msup></mrow></msub><msup><mi>B</mi> <mrow><mi>d</mi><mi>c</mi></mrow></msup></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><msup><mi>B</mi> <mi>a</mi></msup><msub><mrow></mrow> <mi>b</mi></msub><mo>∧</mo><msup><mi>B</mi> <mi>b</mi></msup><msub><mrow></mrow> <mi>e</mi></msub><mo>−</mo><msup><mi>B</mi> <mi>a</mi></msup><msub><mrow></mrow> <mi>b</mi></msub><mo>∧</mo><msup><mi>B</mi> <mrow><mi>b</mi><mi>d</mi></mrow></msup><msub><mo>∂</mo> <mrow><msup><mi>B</mi> <mrow><mi>a</mi><mi>e</mi></mrow></msup></mrow></msub><msup><mi>B</mi> <mi>e</mi></msup><msub><mrow></mrow> <mi>f</mi></msub></mtd></mtr> <mtr><mtd></mtd> <mtd><mphantom><mo>=</mo></mphantom><mo>−</mo><msup><mi>B</mi> <mi>a</mi></msup><msub><mrow></mrow> <mi>b</mi></msub><mo>∧</mo><msup><mi>B</mi> <mi>b</mi></msup><msub><mrow></mrow> <mi>f</mi></msub><msub><mo>∂</mo> <mrow><msup><mi>B</mi> <mi>a</mi></msup><msub><mrow></mrow> <mrow><mi>b</mi><mo>′</mo></mrow></msub></mrow></msub><msup><mi>B</mi> <mi>d</mi></msup><msub><mrow></mrow> <mrow><mi>b</mi><mo>′</mo></mrow></msub><mo>+</mo><msup><mi>B</mi> <mi>a</mi></msup><msub><mrow></mrow> <mi>b</mi></msub><mo>∧</mo><msup><mi>B</mi> <mi>b</mi></msup><msub><mrow></mrow> <mi>c</mi></msub><msub><mo>∂</mo> <mrow><msup><mi>B</mi> <mrow><mi>a</mi><mi>f</mi></mrow></msup></mrow></msub><msup><mi>B</mi> <mrow><mi>d</mi><mi>c</mi></mrow></msup></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mn>10</mn><msub><mi>B</mi> <mrow><mi>f</mi><mi>b</mi></mrow></msub><mo>∧</mo><msup><mi>B</mi> <mrow><mi>b</mi><mi>d</mi></mrow></msup><mo>−</mo><mn>10</mn><msup><mi>B</mi> <mi>d</mi></msup><msub><mrow></mrow> <mi>b</mi></msub><mo>∧</mo><msup><mi>B</mi> <mi>b</mi></msup><msub><mrow></mrow> <mi>f</mi></msub></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>20</mn><mo>⋅</mo><msup><mi>B</mi> <mi>d</mi></msup><msub><mrow></mrow> <mi>e</mi></msub><mo>∧</mo><msup><mi>B</mi> <mi>e</mi></msup><msub><mrow></mrow> <mi>f</mi></msub></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+  \begin{aligned}
+    &amp; 
+    B^{a}{}_b \wedge B^b{}_c 
+    \partial_{B^a{}_{b&#39;}} \partial_{B^{b&#39;}{}_c}
+    (
+      B^{d}{}_e \wedge B^{e}{}_f
+    )
+    \\
+    &amp; =
+    B^{a}{}_b \wedge B^b{}_e 
+    \partial_{B^a{}_{d}} 
+    B^{e}{}_f
+    -     
+    B^{a}{}_b \wedge B^{b d} 
+    \partial_{B^{a e}} 
+    B^{e}{}_f
+    \\
+    &amp; \phantom{=}
+    -
+    B^{a}{}_b \wedge B^b{}_f 
+    \partial_{B^a{}_{b&#39;}}
+    B^{d}{}_{b&#39;} 
+    +
+    B^{a}{}_b \wedge B^b{}_c 
+    \partial_{B^{a f}} 
+    B^{d c} 
+    \\   
+    &amp; =
+    B^{a}{}_b \wedge B^b{}_e 
+    -     
+    B^{a}{}_b \wedge B^{b d} 
+    \partial_{B^{a e}} 
+    B^{e}{}_f
+    \\
+    &amp; \phantom{=}
+    -
+    B^{a}{}_b \wedge B^b{}_f 
+    \partial_{B^a{}_{b&#39;}}
+    B^{d}{}_{b&#39;} 
+    +
+    B^{a}{}_b \wedge B^b{}_c 
+    \partial_{B^{a f}} 
+    B^{d c} 
+    \\
+    &amp; =
+    10 B_{f b} \wedge B^{b d}
+    -
+    10 B^d{}_b \wedge B^b{}_f
+    \\   
+    &amp; = 
+    - 20 \cdot B^{d}{}_e \wedge B^{e}{}_f
+  \end{aligned}
+
+</annotation></semantics></math></div>
 </div>
 
 <div class="revisedby">
-  Revised on February 22, 2018 11:33:45 
+  Revised on February 25, 2018 11:55:06 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (91.230.41.202)
+  (91.230.41.205)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1444" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1444 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1445" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1445 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
